# benchmarks

./: .gitignore  CMakeLists.txt  FindCAF.cmake  README.md  benchmarks.config  benchmarks.files  caf_run_bench.cpp  configure  cppa_test.sh  run  run_benchmarks.sh  utility.hpp
actor_foundry/: README.md  TODO  cleanup.sh  install.sh
actor_foundry/actor_creation/: actor_creation.java  testactor.java
actor_foundry/mailbox_performance/: mailbox.java  mailbox_performance.java  receiver.java  sender.java
actor_foundry/mixed_case/: chain_link.java  chain_master.java  mainactor.java  mixed_case.java  supervisor.java  worker.java
caf/: actor_creation.cpp  backward_compatibility.hpp  distributed.cpp  mailbox_performance.cpp  mandelbrot.cpp  mixed_case.cpp
charm/: charm_actor_creation.cpp  charm_mailbox_performance.cpp  charm_mandelbrot.ci  charm_mandelbrot.cpp  charm_mixed_case.ci  charm_mixed_case.cpp
charm++/: README.md
charm++/creation/: .creation.ci.swo  Makefile  creation.C  creation.ci
charm++/mailbox_performance/: Makefile  mailbox.C  mailbox.ci
charm++/mixed_case/: Makefile  mixed_case.C  mixed_case.ci
cppa/: CMakeLists.txt  FindLibCPPA.cmake  FindLibcaf.cmake  actor_creation.cpp  configure  distributed.cpp  distributed_000801.cpp  mailbox_performance.cpp  matching.cpp  matrix.cpp  matrix_000801.cpp  mixed_case.cpp  mixed_case_000801.cpp
erlang/: actor_creation.erl  mandelbrot.erl  mixed_case.erl
go/mixed_case/: factorize.go  factorize_test.go
include/: benchmark_helper.hpp  erlang_pattern_matching.hpp  utility.hpp
salsa/: actor_creation.salsa  chain_link.salsa  chain_master.salsa  mailbox_performance.salsa  mixed_case.salsa  receiver.salsa  salsa_compile  sender.salsa  supervisor.salsa  worker.salsa
salsa_lite/: cleanup  salsa_compile
salsa_lite/actor_creation/: actor_creation.salsa
salsa_lite/mailbox_performance/: mailbox_performance.salsa  receiver.salsa  sender.salsa
salsa_lite/mixed_case/: chain_link.salsa  chain_master.salsa  mixed_case.salsa  supervisor.salsa  worker.salsa
scala/: CMakeLists.txt  Distributed.scala  actor_creation.scala  distributed.scala  mailbox_performance.scala  mandelbrot.scala  mixed_case.scala  utility.scala
scripts/: activate_cores  caf_plot  caf_run_benchmarks.py  caf_run_benchmarks.sh  plot  plot_memory.R  plot_performance.R  run_scheduler  test.sh
scripts/metrics/: cpu_counters.py  metric_count_steals.py  metric_template.py
scripts/metrics/test_data/: cache_access_plot_a.txt  mem_access_plot_a.txt  mem_access_plot_b.txt  steal_counter_raw_data.txt
src/actor_foundry/: README.md
src/actor_foundry/mailbox_performance/: mailbox_performance.java
src/actor_foundry/mixed_case/: mixed_case.java  worker.java
src/caf/: CMakeLists.txt  actor_creation.cpp  distributed.cpp  mailbox_performance.cpp  mandelbrot.cpp  matching.cpp  matrix.cpp  micro.cpp  mixed_case.cpp  scheduling.cpp  simple_streaming.cpp  v2.hpp  v3.hpp  v4.hpp
src/caf/bencherl/: bencherl_01_bang.cpp  bencherl_02_big.cpp  bencherl_03_ehb.cpp  bencherl_05_genstress.cpp  bencherl_06_mbrot.cpp  bencherl_08_parallel.cpp  bencherl_10_ran.cpp  bencherl_11_serialmsg.cpp  bencherl_12_timer_wheel.cpp
src/caf/microbenchmarks/: CMakeLists.txt  message-creation.cpp  pattern-matching.cpp  serialization.cpp  streaming.cpp
src/caf/numa/: numa_matrix_search.cpp  numa_matrix_search_continues.cpp
src/caf/savina/: savina_01_pingpong.cpp  savina_02_count.cpp  savina_03_fjthrput.cpp  savina_04_fjcreate.cpp  savina_05_threadring.cpp  savina_06_chameneos.cpp  savina_07_big.cpp  savina_08_concdict.cpp  savina_09_concsll.cpp  savina_10_bndbuffer.cpp  savina_11_philosopher.cpp  savina_14_logmap.cpp  savina_15_banking.cpp  savina_16_radixsort.cpp  savina_18_sieve.cpp  savina_20_facloc.cpp  savina_21_trapezoid.cpp  savina_23_recmatmul.cpp  savina_24_quicksort.cpp  savina_25_apsp.cpp  savina_28_nqueenk.cpp  savina_29_fib.cpp  savina_30_bitonicsort.cpp
src/charm/: README.md  charm_actor_creation.ci  charm_mailbox_performance.ci  charm_mandelbrot.ci  charm_mandelbrot.cpp  charm_mixed_case.ci
src/erlang/: CMakeLists.txt  Makefile  mandelbrot.erl
src/erlang/bencherl/: bencherl_01_bang.erl  bencherl_02_big.erl  bencherl_03_ehb.erl  bencherl_05_genstress.erl  bencherl_06_mbrot.erl  bencherl_08_parallel.erl  bencherl_10_ran.erl  bencherl_11_serialmsg.erl  bencherl_12_timer_wheel.erl
src/go/: CMakeLists.txt
src/go/mixed_case/: main.go
src/salsa/: actor_creation.salsa  chain_link.salsa  chain_master.salsa  mandelbrot.salsa  mandelbrot_worker.salsa  mixed_case.salsa  receiver.salsa  supervisor.salsa  worker.salsa
src/scala/: actor_creation.scala  distributed.scala  mailbox_performance.scala  mandelbrot.scala  matching.scala  mixed_case.scala  utility.scala
src/scripts/: caf_run_benchmarks.in  run.in
theron/: CMakeLists.txt  actor_creation.cpp  mailbox_performance.cpp  mixed_case.cpp
tools/: CMakeLists.txt  caf_run_bench.cpp  to_csv.cpp  to_dat.cpp
